# robot-emulation

./: Dockerfile  README.md  pyproject.toml
src/robot_emulation/: main.py
src/robot_emulation/core/: robot.py  world.py
static/: point-to-leader.webm
